[package]
name = "ruffyos"
version = "0.1.0"
edition = "2021"
authors = ["Kshitij Aucharmal <kshitijaucharmal21@gmail.com>"]

# the profile used for `cargo build`
[profile.dev]
panic = "abort" # disable stack unwinding on panic

# the profile used for `cargo build --release`
[profile.release]
panic = "abort" # disable stack unwinding on panic

# Will not work on its own
# https://github.com/rust-osdev/bootimage
# This tool compiles the kernel and bootloader first, and then links them together to create a bootable disk image
[dependencies]
bootloader = "0.9"
